# websocket

./: .gitignore  CMakeLists.txt  Makefile  README.md  base64.cpp  build_linux_VCPKG.sh  build_win64_vs2019_release_VCPKG.bat  chat.htm  connection.cpp  connection.h  demo.cpp  demo.h  frame.cpp  frame.h  tags  tools.h  user.cpp  user.h  webchat.cpp  webchat.h  webchat.htm  websocket.cpp  websocket.h
demo/: demo.cpp  demo.h  user.cpp  user.h
libevent/include/event2/: event-config.h
libevent/lib/: libevent.la  libevent_core.la  libevent_extra.la  libevent_openssl.la  libevent_pthreads.la
libevent/lib/pkgconfig/: libevent.pc  libevent_openssl.pc  libevent_pthreads.pc
libopenssl/include/openssl/: opensslconf.h
libopenssl/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
md5/: md5.cpp  md5.h
